Move to es6, and mocha tests in browser.

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     <script type="module">
-        import {create} from '../out/main.js';
+        import { create } from './../out/src/main.js';
         let emu = create('emu', document.body);
         document.getElementById(emu.id).innerHTML = "Test"
     </script>
