Implement ADD/ADC

--- a/tests/test.html
+++ b/tests/test.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/mocha/mocha.js"></script>
 
     <script type=module src="./../out/tests/opcode-tests.js"></script>
+    <script type=module src="./../out/tests/extended-opcode-tests.js"></script>
     <script class="mocha-init">
       mocha.setup('qunit');
       mocha.growl(); // <-- Enables web notifications
