Start implementing rendering loop.
Also fix a couple issues with the endianness of some of the tests.

--- a/example/index.html
+++ b/example/index.html
@@ -30,6 +30,7 @@
                 <input type="button" id="startButton" value="Start">
                 <input type="button" id="stopButton" value="Stop">
                 <input type="button" id="skipBootButton" value="Skip Boot">
+                <input type="button" id="frameButton" value="Run Until Next Frame">
             </div>
         </div>
 
