--- a/example/index.html
+++ b/example/index.html
@@ -31,6 +31,16 @@
                 <input type="button" id="stopButton" value="Stop">
                 <input type="button" id="skipBootButton" value="Skip Boot">
                 <input type="button" id="frameButton" value="Run Until Next Frame">
+                <div id="game-help">
+                    Start = Enter<br/>
+                    Select = Right Shift<br/>
+                    B = Z<br/>
+                    X = A<br/>
+                    Down = Down<br/>
+                    Up = Up<br/>
+                    Left = Left<br/>
+                    Right = Right<br/>
+                </div>
             </div>
         </div>
 
