Implement saves proof of concept to make testing in-game flows easier (so i can skip oak dialogue).
Save states are a bit more complicated, and a future TODO.

--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,9 @@
         <div id="game">
             <div id="game-screen"></div>
             <div id="game-controls">
-                <input type="file" id="fileInput" value ="Load Rom"> 
+                <input type="file" id="romInput" value ="Load Rom"> 
+                <input type="file" id="ramInput" value ="Load Ram"> 
+                <input type="button" id="saveRam" value ="Save Ram"> 
                 <input type="button" id="step0x1Button" value="Step 0x1">
                 <input type="button" id="step0x10Button" value="Step 0x10">
                 <input type="button" id="step0x100Button" value="Step 0x100">
